--- a/papers/maite/.gitignore
+++ b/papers/maite/.gitignore
@@ -1,2 +1,5 @@
 Pons et al._length-based methods_Small_scombrids_final.docx
 paper_catch_length_methods.zip
+_system_appendPDF_proof_hi.pdf
+catch-length-ijms.pdf
+length-ijms.pdf
