--- a/papers/maite/.gitignore
+++ b/papers/maite/.gitignore
@@ -3,3 +3,4 @@ paper_catch_length_methods.zip
 _system_appendPDF_proof_hi.pdf
 catch-length-ijms.pdf
 length-ijms.pdf
+.~lock.Performance of catch and length based methods - Pons et al._JMC_MP_LK.docx#
