--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,23 @@
 /home/laurence/Desktop/sea++/mydas/project/mydas-project.Rproj
 .Rproj.user
 .Rhistory
-.RData
 .Ruserdata
+.RData
 **/data
 **/cache
 **/docs
 **/inputs
-**/*.RData
-**/*.csv
-**/*.log
-**/*.aux
-**/*.toc
-**/*.backup
-**/*.gz
-**/*.html
+*.RData
+*.csv
+*.log
+*.aux
+*.toc
+*.backup
+*.gz
+*.html
+*.odt
+*.odt#
+*.docx
+*.docx#
 mydas-project.Rproj
 _rslurm_randomD
