--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,16 @@
-/home/laurence/Desktop/sea++/mydas/project/mydas-project.Rproj
+.gitignore
 .Rproj.user
 .Rhistory
-.Ruserdata
-.RData
-**/data
-**/cache
-**/docs
-**/inputs
-*.RData
-*.csv
-*.log
-*.aux
-*.toc
-*.backup
-*.gz
-*.html
-*.odt
-*.odt#
-*.docx
-*.docx#
-mydas-project.Rproj
-pkg
+mydas.Rproj
+ichec
+hidden
 wiki
-
+pkg
+papers\length
+papers\length-catch
+*.html
+*.png
+*.doc
+*.log
+!tasks/
+tasks/*
